--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/AlbumCard/AlbumCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/AlbumCard/AlbumCard.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,11 +11,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="AlbumCard" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="469"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z0x-Iu-F9r">
-                    <rect key="frame" x="15" y="15" width="257" height="21"/>
+                    <rect key="frame" x="15" y="15" width="41.5" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="8Cs-RK-55a"/>
                     </constraints>
@@ -32,22 +32,9 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3Y-Zc-uCl">
-                    <rect key="frame" x="15" y="82" width="290" height="18"/>
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="5UF-VF-Wpq"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H1a-JQ-4mn">
-                    <rect key="frame" x="287" y="0.0" width="33" height="33"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="33" id="mKt-4M-7rJ"/>
-                        <constraint firstAttribute="width" constant="33" id="pWG-Fc-XBk"/>
-                    </constraints>
-                    <state key="normal" image="CloseCardIcon"/>
+                    <rect key="frame" x="282" y="15" width="24" height="24"/>
+                    <state key="normal" image="iconCancelBorder"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="exclusiveTap" value="YES"/>
                     </userDefinedRuntimeAttributes>
@@ -55,18 +42,8 @@
                         <action selector="actionCloseButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="qk5-En-geV"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UWR-Oz-VT8">
-                    <rect key="frame" x="0.0" y="424" width="320" height="1"/>
-                    <color key="backgroundColor" white="0.80000000000000004" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="1" id="DpY-de-oj7"/>
-                    </constraints>
-                </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLQ-gs-aeI">
-                    <rect key="frame" x="14" y="425" width="46" height="44"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="44" id="mW5-7w-KaB"/>
-                    </constraints>
+                    <rect key="frame" x="14" y="382" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="exclusiveTap" value="YES"/>
@@ -76,16 +53,16 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lgC-zx-PRf">
-                    <rect key="frame" x="8" y="106" width="304" height="304"/>
+                    <rect key="frame" x="14" y="82" width="292" height="292"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YGs-5l-TOq">
-                            <rect key="frame" x="1" y="1" width="302" height="302"/>
+                            <rect key="frame" x="1" y="1" width="290" height="290"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8bJ-os-ke5" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="302" height="302"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="290" height="290"/>
                                 </imageView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nux-hs-zyp">
-                                    <rect key="frame" x="0.0" y="0.0" width="302" height="302"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="290" height="290"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="boolean" keyPath="exclusiveTap" value="YES"/>
                                     </userDefinedRuntimeAttributes>
@@ -116,38 +93,36 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LCC-iL-AFk">
-                    <rect key="frame" x="217" y="432" width="46" height="30"/>
+                    <rect key="frame" x="266" y="388" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <connections>
                         <action selector="shareButtonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="hMf-Us-07l"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="album id" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p3Y-Zc-uCl">
+                    <rect key="frame" x="187" y="25" width="65" height="18"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" name="secondaryBackground"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="lgC-zx-PRf" secondAttribute="trailing" constant="8" id="1Xi-7B-YqL"/>
-                <constraint firstAttribute="trailing" secondItem="H1a-JQ-4mn" secondAttribute="trailing" id="2VY-yF-84P"/>
-                <constraint firstItem="LCC-iL-AFk" firstAttribute="width" secondItem="aLQ-gs-aeI" secondAttribute="width" id="4zu-VI-nLg"/>
-                <constraint firstItem="aLQ-gs-aeI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="6ni-OP-LV4"/>
+                <constraint firstAttribute="trailing" secondItem="lgC-zx-PRf" secondAttribute="trailing" constant="14" id="1Xi-7B-YqL"/>
+                <constraint firstItem="LCC-iL-AFk" firstAttribute="top" secondItem="lgC-zx-PRf" secondAttribute="bottom" constant="14" id="396-bL-4lK"/>
                 <constraint firstItem="sQM-Sv-G0F" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="A6u-ah-k8l"/>
                 <constraint firstItem="z0x-Iu-F9r" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="AlD-d5-XXt"/>
-                <constraint firstItem="LCC-iL-AFk" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" multiplier="1.5" id="CIm-Lk-qMg"/>
-                <constraint firstItem="LCC-iL-AFk" firstAttribute="height" secondItem="aLQ-gs-aeI" secondAttribute="height" multiplier="0.681818" id="Ft5-BV-wkN"/>
-                <constraint firstItem="H1a-JQ-4mn" firstAttribute="leading" secondItem="z0x-Iu-F9r" secondAttribute="trailing" constant="15" id="HMB-9u-ZMV"/>
-                <constraint firstItem="UWR-Oz-VT8" firstAttribute="top" secondItem="lgC-zx-PRf" secondAttribute="bottom" constant="14" id="KVg-xQ-bhk"/>
-                <constraint firstItem="LCC-iL-AFk" firstAttribute="centerY" secondItem="aLQ-gs-aeI" secondAttribute="centerY" id="PGN-1l-Pfb"/>
-                <constraint firstItem="lgC-zx-PRf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="UDM-Wl-LAD"/>
-                <constraint firstItem="p3Y-Zc-uCl" firstAttribute="top" secondItem="sQM-Sv-G0F" secondAttribute="bottom" constant="10" id="YKg-Gz-UiC"/>
-                <constraint firstItem="UWR-Oz-VT8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="YZT-3G-mzu"/>
-                <constraint firstAttribute="trailing" secondItem="UWR-Oz-VT8" secondAttribute="trailing" id="ZIx-9q-4IJ"/>
-                <constraint firstItem="H1a-JQ-4mn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ZTi-h3-RAG"/>
+                <constraint firstItem="lgC-zx-PRf" firstAttribute="top" secondItem="sQM-Sv-G0F" secondAttribute="bottom" constant="10" id="GIL-E4-hdt"/>
+                <constraint firstItem="lgC-zx-PRf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="UDM-Wl-LAD"/>
                 <constraint firstAttribute="trailing" secondItem="sQM-Sv-G0F" secondAttribute="trailing" constant="15" id="chu-HZ-zsR"/>
                 <constraint firstItem="sQM-Sv-G0F" firstAttribute="top" secondItem="z0x-Iu-F9r" secondAttribute="bottom" constant="15" id="i2t-iO-jCp"/>
-                <constraint firstItem="aLQ-gs-aeI" firstAttribute="top" secondItem="UWR-Oz-VT8" secondAttribute="bottom" id="oNf-qY-cFR"/>
+                <constraint firstItem="aLQ-gs-aeI" firstAttribute="top" secondItem="lgC-zx-PRf" secondAttribute="bottom" constant="8" id="iRv-kP-17V"/>
+                <constraint firstItem="H1a-JQ-4mn" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="jhY-IH-m4L"/>
+                <constraint firstAttribute="trailing" secondItem="LCC-iL-AFk" secondAttribute="trailing" constant="8" id="ma7-lT-eyG"/>
+                <constraint firstItem="aLQ-gs-aeI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="nEu-T6-aXJ"/>
                 <constraint firstItem="z0x-Iu-F9r" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="pyh-Qi-XIO"/>
-                <constraint firstAttribute="trailing" secondItem="p3Y-Zc-uCl" secondAttribute="trailing" constant="15" id="sfp-yA-J6t"/>
-                <constraint firstItem="lgC-zx-PRf" firstAttribute="top" secondItem="p3Y-Zc-uCl" secondAttribute="bottom" constant="6" id="tV4-nN-58J"/>
-                <constraint firstItem="p3Y-Zc-uCl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="vEd-fQ-O8h"/>
+                <constraint firstAttribute="trailing" secondItem="H1a-JQ-4mn" secondAttribute="trailing" constant="14" id="vT1-R2-DYI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -159,11 +134,11 @@
                 <outlet property="subTitleLabel" destination="sQM-Sv-G0F" id="OUZ-Gc-ZX6"/>
                 <outlet property="titleLabel" destination="z0x-Iu-F9r" id="OEv-8t-dYp"/>
             </connections>
-            <point key="canvasLocation" x="221" y="-24"/>
+            <point key="canvasLocation" x="220.80000000000001" y="-41.379310344827587"/>
         </view>
     </objects>
     <resources>
-        <image name="CloseCardIcon" width="14" height="14"/>
+        <image name="iconCancelBorder" width="24" height="24"/>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
